# simple_inference_server

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
.github/workflows/: ubuntu22.yml  ubuntu24.yml
src/: CMakeLists.txt  Controller.cpp  Controller.h  Job.cpp  Job.h
